--- a/styles.css
+++ b/styles.css
@@ -168,7 +168,7 @@ line-height: 140%;
     background-color: #fff !important;
     border-radius: 15px;
     box-shadow: 0px 0px 1px 0px #000000;
-    min-width: 200px;
+    min-width: 300px;
 }
 
 .DonationFrequnecy .contentDev{
@@ -180,7 +180,7 @@ line-height: 140%;
     margin-top: 10px;
     max-width: 5000px;
     max-height: 5000px;
-    min-width: 100px;
+    min-width: 150px;
     padding: 10px 20px 10px 20px;
     justify-content: space-between;
     margin-left: 20px;
@@ -251,8 +251,8 @@ line-height: 140%;
 
   .ourImpact{
     /* Our Impact by the Numbers */
-    width: 540px;
-    height: 176px; /* Adjust if needed */
+    max-width: 540px;
+    max-height: 176px; /* Adjust if needed */
     font-family: 'Cairo';
     font-style: normal;
     font-weight: 600;
@@ -323,9 +323,7 @@ height: 64px;
 }
 
 .donationCards{
-
-    padding-left: 90px !important;
-   
+    padding-left: 60px !important;
 }
 .donationCardTitle{
     align-items: start;
@@ -437,7 +435,9 @@ line-height: 165%;
 color: #002147;
 }
 
-
+.ourPaterns{
+    margin: 0;
+}
 .ourPaternsP{
     /* OUR PARTNERS */
 min-width: 109px;
@@ -478,6 +478,8 @@ color: #0F111D;
     grid-template-rows: repeat(2, 1fr);
     grid-gap: 20px;
     width: min-content;
+    justify-content: center;
+    align-items: center;
 }
 
 .partner {
@@ -488,7 +490,12 @@ color: #0F111D;
     justify-content: center;
     align-items: center;
     padding: 10px;
-
+    min-height: 100%;
+    width: 220px;
+}
+.partner img {
+    min-width: 100%;
+    max-height: 100%;
 }
 
 
@@ -510,6 +517,12 @@ color: #0F111D;
     .partners-grid {
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(2, 1fr);
+        gap: 10px;
+        
+    }
+
+    .partner.span-two-rows {
+        grid-row: span 2;   
     }
 }
 
@@ -517,6 +530,7 @@ color: #0F111D;
     .partners-grid {
         grid-template-columns: repeat(1, 1fr);
         grid-template-rows: repeat(2, 1fr);
+        margin-left: 150px;
     }
 }
 
@@ -524,17 +538,18 @@ color: #0F111D;
 
 .partner.span-two-rows {
     grid-row: span 2;
+    
 }
 
 .partner.more {
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     font-weight: 500;
     font-size: 16px;
     line-height: 175%;
     color: #0F111D;
+    max-width: 350px !important;
 }
 
 .contactImg{
