--- a/styles.css
+++ b/styles.css
@@ -275,7 +275,6 @@ line-height: 140%;
 
 
 .openDonationContainer{
-
     text-align: center;
 }
 .openDonationTitle{
@@ -322,9 +321,7 @@ height: 64px;
     background-color: var(--primary-color);
 }
 
-.donationCards{
-  
-}
+
 .donationCardTitle{
     align-items: start;
     text-align: left;
@@ -347,6 +344,17 @@ border-radius: 4px;
     background-color: var(--secondary-color);
 }
 
+@media (min-width:590px) {
+    .donationCards{
+        padding-left: 130px;
+    }
+}
+
+@media (min-width:375px) {
+    .donationCards{
+        padding-left: 70px;
+    }
+}
 .donationCardText{
     text-align: left;
 }
@@ -366,11 +374,11 @@ border-radius: 4px;
 }
 
 .phoneHead{
-    padding-left: 60px;
+    padding-left: 40px;
 }
 .phoneH6{
     /* MODERN CROWDFUNDING PLATFORM */
-width: max-content;
+max-width: max-content;
 height: 18px;
 font-family: 'DM Sans';
 font-style: normal;
@@ -411,7 +419,7 @@ color: #5C6574;
 
 .missionHeaderH2{
     /* Assisting artists in building their businesses and developing their artistic projects. We are here to support creativity and contribute to realizing their artistic visions. */
-width: 430px;
+max-width: 430px;
 height: 170px;
 font-family: 'DM Sans';
 font-style: normal;
@@ -533,6 +541,14 @@ color: #0F111D;
        
     }
 }
+@media (max-width: 400px) {
+    .partners-grid {
+        /* grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(2, 1fr); */
+        padding-left: 70px;
+       
+    }
+}
 
 
 
@@ -617,4 +633,8 @@ color: #000000;
 
 .footerLogo{
     width: min-content;
+}
+
+.footerHeader{
+    margin-bottom: 50px;
 }
