--- a/styles.css
+++ b/styles.css
@@ -344,11 +344,11 @@ border-radius: 4px;
     background-color: var(--secondary-color);
 }
 
-@media (min-width:590px) {
+/* @media (min-width:590px) {
     .donationCards{
         padding-left: 130px;
     }
-}
+} */
 
 @media (min-width:375px) {
     .donationCards{
