--- a/styles.css
+++ b/styles.css
@@ -443,6 +443,12 @@ line-height: 165%;
 color: #002147;
 }
 
+
+@media (min-width:275px) {
+    .theNewPartener {
+        padding-left: 130px !important;
+    }
+}
 .ourPaterns{
     margin: 0;
 }
